--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,9 @@
         "psr-4": {
             "Programulin\\Storage\\": "src/"
         }
-    }
+    },
+	"require": {
+		"php": ">=5.4.0",
+		"intervention/image": "^2.4"
+	}
 }
